[gd_scene load_steps=8 format=3 uid="uid://bbsitwlohid3f"]

[ext_resource type="Script" path="res://Scripts/GUI/SubMenu(Start).gd" id="1_fh2ub"]
[ext_resource type="FontFile" uid="uid://cdeoel5armh63" path="res://Assets/Fonts/TheWildBreathOfZelda-15Lv.ttf" id="2_g4ulm"]
[ext_resource type="Texture2D" uid="uid://brkmll7ufqs41" path="res://Extras/back.jpg" id="2_xp0ip"]
[ext_resource type="PackedScene" uid="uid://ml6wxqcssbom" path="res://Scenes/Redundants/fire_chock.tscn" id="3_ymi6s"]

[sub_resource type="Animation" id="Animation_n036p"]
resource_name = "Default"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [39.1143, 29.4982, 39.1143]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0134228, 0.0972029, -0.136792)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.165632, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1x88i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [29.4982]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0134228, 0.0972029, -0.136792)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_immdv"]
_data = {
"Default": SubResource("Animation_n036p"),
"RESET": SubResource("Animation_1x88i")
}

[node name="Node3D" type="Node3D"]
script = ExtResource("1_fh2ub")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.985804, 0.137012, 0.0970412, -0.136353, 0.990569, -0.0134224, -0.097965, -4.19095e-08, 0.99519, 0, 0, 0)
current = true
fov = 29.4982

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D"]
autoplay = "Default"
libraries = {
"": SubResource("AnimationLibrary_immdv")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SubMenuStart" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tittle" type="Label" parent="CanvasLayer/SubMenuStart"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -303.0
offset_top = 4.0
offset_right = 330.0
offset_bottom = 144.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_g4ulm")
theme_override_font_sizes/font_size = 100
text = "DragonÂ´s Destiny"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SubMenuStart"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -117.0
offset_right = 85.5
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22
alignment = 1

[node name="start" type="Button" parent="CanvasLayer/SubMenuStart/VBoxContainer"]
theme_override_font_sizes/font_size = 32
text = "Jugar"

[node name="config" type="Button" parent="CanvasLayer/SubMenuStart/VBoxContainer"]
theme_override_font_sizes/font_size = 32
text = "Configuracion"

[node name="credits" type="Button" parent="CanvasLayer/SubMenuStart/VBoxContainer"]
theme_override_font_sizes/font_size = 32
text = "Creditos"

[node name="Exit" type="Button" parent="CanvasLayer/SubMenuStart/VBoxContainer"]
theme_override_font_sizes/font_size = 32
text = "Salir"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/SubMenuStart"]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.72819)
texture = ExtResource("2_xp0ip")

[node name="Area3D" parent="." instance=ExtResource("3_ymi6s")]
transform = Transform3D(-0.180073, -0.983653, 0, 0.983653, -0.180073, 0, 0, 0, 1, 0.664488, -0.617194, -0.95662)
script = null

[node name="Area3D2" parent="." instance=ExtResource("3_ymi6s")]
transform = Transform3D(-0.180073, -0.983653, 0, 0.983653, -0.180073, 0, 0, 0, 1, -0.408718, -0.617194, -0.95662)
script = null

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(0.9109, -1.35735e-08, -0.412628, 0.281811, 0.730448, 0.622115, 0.301403, -0.682968, 0.665365, 0, 0, -1.26209)
omni_range = 1.89911

[connection signal="pressed" from="CanvasLayer/SubMenuStart/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/SubMenuStart/VBoxContainer/config" to="." method="_on_config_pressed"]
[connection signal="pressed" from="CanvasLayer/SubMenuStart/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/SubMenuStart/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
